--- a/RubiksCube/RubiksCube.vcxproj.filters
+++ b/RubiksCube/RubiksCube.vcxproj.filters
@@ -45,6 +45,9 @@
     <ClCompile Include="Action\Animator.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Action\Translation.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Tile.h">
@@ -75,6 +78,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Enums.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Action\Translation.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
