--- a/DrawRubiksCube/DrawRubiksCube.vcxproj
+++ b/DrawRubiksCube/DrawRubiksCube.vcxproj
@@ -122,6 +122,7 @@
     <ClCompile Include="BrickModel.cpp" />
     <ClCompile Include="BricksModelsManager.cpp" />
     <ClCompile Include="EventReceiver.cpp" />
+    <ClCompile Include="FloorModel.cpp" />
     <ClCompile Include="main.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -130,10 +131,12 @@
     <ClInclude Include="BrickModel.h" />
     <ClInclude Include="BricksModelsManager.h" />
     <ClInclude Include="EventReceiver.h" />
+    <ClInclude Include="FloorModel.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Shaders\Cube_Fragment_Shader.glsl" />
     <None Include="Shaders\Cube_Vertex_Shader.glsl" />
+    <None Include="Shaders\Floor_Vertex_Shader.glsl" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
