--- a/DrawRubiksCube/DrawRubiksCube.vcxproj.filters
+++ b/DrawRubiksCube/DrawRubiksCube.vcxproj.filters
@@ -33,6 +33,9 @@
     <ClCompile Include="Action\Petla.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="FloorModel.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Action\ColorArranger.h">
@@ -50,9 +53,13 @@
     <ClInclude Include="Action\Petla.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="FloorModel.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="Shaders\Cube_Fragment_Shader.glsl" />
     <None Include="Shaders\Cube_Vertex_Shader.glsl" />
+    <None Include="Shaders\Floor_Vertex_Shader.glsl" />
   </ItemGroup>
 </Project>
