--- a/DrawRubiksCube/DrawRubiksCube.vcxproj
+++ b/DrawRubiksCube/DrawRubiksCube.vcxproj
@@ -122,6 +122,7 @@
     <ClCompile Include="BrickModel.cpp" />
     <ClCompile Include="BricksModelsManager.cpp" />
     <ClCompile Include="EventReceiver.cpp" />
+    <ClCompile Include="FloorModel.cpp" />
     <ClCompile Include="main.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -130,6 +131,7 @@
     <ClInclude Include="BrickModel.h" />
     <ClInclude Include="BricksModelsManager.h" />
     <ClInclude Include="EventReceiver.h" />
+    <ClInclude Include="FloorModel.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Shaders\Cube_Fragment_Shader.glsl" />
